# django-project-template

./: .authors.yml  .bandit  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .gitignore-update  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CLEANUP.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  TODO.md  build.sh  commands.md  commands.txt  comparison_output.json  conftest.py  db.sqlite3  docker-compose.yml  dump_project.py  manage.py  mypy.ini  overview_2024-01-01.json  package-lock.json  package.json  prometheus.yml  pyproject.toml  pytest.ini  render.yaml  replace_navy_colors.sh  requirements.txt  run_htmx_tests.sh  (+9 more)
.claude/commands/: mcp-skill.md  prime.md
.claude/skills/: README.md
.claude/skills/chrome-devtools/: SKILL.md
.claude/skills/examples/: deployment.md  django-admin.md
.claude/skills/github/: SKILL.md
.claude/skills/postgres/: SKILL.md
.claude/skills/sentry/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  docs.yml  lint.yml  security.yml  test.yml
apps/ai/: README.md  __init__.py  admin.py  apps.py  urls.py
apps/ai/agent/: chat.py  simple_tools.py  tools.py
apps/ai/code_execution/: EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PRODUCTION_SANDBOX_COMPARISON.md  QUICKSTART.md  README.md  ROADMAP.md  __init__.py  exceptions.py  models.py
apps/ai/llm/: providers.py
apps/ai/mcp/: README.md  server.py
apps/ai/migrations/: 0001_initial.py  0002_delete_agent_delete_aicompletion_and_more.py  __init__.py
apps/ai/models/: __init__.py  agent.py  ai_completion.py  chat.py  prompt_template.py
apps/ai/tests/: __init__.py  factories.py  test_app_config.py  test_e2e_browser_chat.py  test_e2e_chat.py  test_models.py
apps/ai/views/: __init__.py  chat.py  test_chat.py  test_page.py
apps/api/: README.md  urls.py
apps/api/serializers/: __init__.py  todo.py  user.py
apps/api/tests/: __init__.py  api_test_case.py  conftest.py  test_api_key.py  test_api_structure.py  test_image_api.py  test_todo_api.py  (+4 more)
apps/common/: README.md  admin.py  admin_dashboard.py  apps.py  utils.py
apps/communication/: README.md  admin.py  apps.py
apps/insights/: admin.py  apps.py  data_pipeline.py  dump_project.py  forms.py  get_summaries.py  insight-app.txt  insights-app.txt  insights-app2.txt  models.py  signals.py  signals.soon.py  tasks.py  tasks_chain.py  tasks_group.py
apps/integration/: README.md
apps/public/: README.md  context_processors.py  urls.py
apps/staff/: README.md  __init__.py  admin.py  apps.py  urls.py
apps/user/: apps.py
docs/: AI_BROWSER_TESTING.md  ARCHITECTURE.md  BEHAVIOR_MIXINS.md  BROWSER_TESTING.md  CICD.md  CONTRIBUTING.md  E2E_TESTING.md  ERROR_HANDLING.md  HTMX_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  MCP_DEVELOPMENT_GUIDE.md  MODAL_PATTERNS.md  MODEL_CONVENTIONS.md  REPO_MAP.md  SAFE_LLM_CODE_EXECUTION_ARCHITECTURE.md  SCREENSHOT_SERVICE.md  SETUP_GUIDE.md  TAILWIND_V4.md  TAILWIND_V4_UPGRADE.md  TEMPLATE_CONVENTIONS.md  TEST_CONVENTIONS.md  TEST_TROUBLESHOOTING.md  TODO.md  VIEW_CONVENTIONS.md  ZED_SETUP.md  example_unfold_admin.py
docs/advanced/: TEST_TROUBLESHOOTING.md
docs/examples/: item_list_example.html  list_items_partial.html  modal_example_view.py
docs/guides/: AI_BROWSER_TESTING.md  BROWSER_TESTING.md  CICD.md  CONTRIBUTING.md  E2E_TESTING.md  HTMX_AND_RESPONSIVE_TESTING.md  MCP-SKILLS.md  SCREENSHOT_SERVICE.md  SETUP_GUIDE.md  TAILWIND_V4_MIGRATION_CHECKLIST.md  example_unfold_admin.py  item_list_example.html  list_items_partial.html  modal_example_view.py
docs/plans/: FLUTTER_BACKEND_READINESS.md  README.md  ai-app-documentation.md  behavior-mixins-documentation.md  htmx-integration-documentation.md  integrations-documentation.md  remove_wishes_feature.md  utilities-documentation.md
docs/scripts/: build.sh  build_all_docs.sh  build_docs.sh  build_docs_ci_fixed.sh  generate_api_docs.py  install-hooks.sh  setup_local_env.sh
docs/sphinx_docs/: Makefile  README.md  make.bat
guides/: PYCHARM_CONFIG.MD
kubernetes/base/: kustomization.yaml  namespace.yaml
requirements/: MIGRATION.md  MIGRATION_TO_UV.md  README.md  base.in  base.lock.txt  base.txt  dev.in  dev.lock.txt  dev.txt  export.sh  generate_deployment_requirements.sh  install.sh  prod.in  prod.lock.txt  prod.txt  setup.sh  test.sh
scripts/: k8s-cleanup.sh  k8s-setup.sh
settings/: README.md  __init__.py  asgi.py  base.py  celery.py  celery_beat.py  database.py  databases.py  dump.txt  dump_project.py  env.py  local.py  local_pydantic.py  local_template.py  logging.py  production.py  pydantic_settings.py  redis_db.py  settings-dump.txt  third_party.py  unfold.py  urls.py  vendor.py  wsgi.py
settings/scheduler/: __init__.py  beat.py  celery.py
static/: dont_put_things_here.txt
static/css/: base.css  content.txt  output.css  source.css  tailwind.css
static/js/: base.js
templates/: README.md  _base.html  _base_new.html  _partial.html  base.html  error.html  examples.html  footer.html  home.html  messages.html  partial.html  swagger-ui.html
templates/account/: login.html  settings.html
templates/components/: _component_base.html  examples.html  oob_wrapper.html
templates/examples/: 404.html  bento_grid.html  form.html  landing_page.html  modal_dialog.html  navbar.html
templates/layout/: footer.html  modals.html  navbar.html
templates/messages/: toast.html
templates/nav/: account_menu.html  navbar.html  navbar_new.html
templates/pages/: blog.html  blog_post.html  home.html  landing.html  pricing.html
templates/partials/: _partial_base.html
templates/teams/: team_confirm_delete.html  team_detail.html  team_form.html  team_list.html
templates/todos/: todo_confirm_delete.html  todo_detail.html  todo_form.html  todo_list.html
templates/wishes/: wish_confirm_delete.html  wish_detail.html  wish_form.html  wish_list.html
theme/: apps.py
theme/static_src/: package-lock.json  package.json  tailwind.config.js
tools/: generate_repo_map.py
tools/testing/: README.md  browser_test_runner.py  config.py  coverage_reporter.py  test_manager.py
(+573 files in other folders)
