[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apps"]

[project]
name = "django-project-template"
version = "0.1.0"
description = "A modern Django project template"
readme = "README.md"
authors = [
    {name = "Valor Engels", email = "your_email@example.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-debug-toolbar>=6.1.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-api-key>=3.1.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
    "dj-database-url>=3.0.1",
    "gunicorn",
    "whitenoise>=6.11.0",
    "django-storages>=1.14.6",
    "django-widget-tweaks>=1.5.0",
    "django-htmx>=1.26.0",
    "django-unfold>=0.71.0",
    "selenium>=4.36.0",
    "django-tailwind-cli>=4.4.2",
    "drf-yasg>=1.21.11",
    "pydantic-ai>=0.7.0",
    "openai>=1.99.1",
    "mcp>=1.22.0",
    "mcp-python>=0.1.4",
    "pre-commit>=4.5.0",
    "cryptography>=46.0.0",
    "pillow>=11.3.0",
    "certifi>=2025.8.3",
    "urllib3>=2.5.0",
    "requests>=2.32.4",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "django-browser-reload>=1.21.0",
    "Werkzeug",
    "aider-chat>=0.86.1",
    "black>=25.11.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "django-stubs>=5.2.7",
    "ipython>=9.7.0",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "factory-boy>=3.3.3",
]
e2e = [
    "browser-use>=0.5.9",
    "playwright>=1.56.0",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-project-template"
Issues = "https://github.com/yourusername/django-project-template/issues"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.django-stubs]
django_settings_module = "settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
python_files = "test_*.py"
testpaths = ["apps"]
filterwarnings = [
    "ignore::RuntimeWarning:django.db.models.fields",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "django-browser-reload>=1.21.0",
    "django-stubs>=5.2.7",
    "ipython>=9.7.0",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
]
e2e-testing = [
    "browser-use>=0.5.9",
    "playwright>=1.56.0",
    "pytest-asyncio>=1.3.0",
]
